# python-lolhtml

./: .gitignore  Cargo.toml  README.md  lolhtml_test.py  pyproject.toml
src/: element.rs  end_tag.rs  lib.rs  settings.rs
src/rewritable_units/: document_end.rs  element.rs  mod.rs
src/rewritable_units/tokens/: comments.rs  end_tag.rs  mod.rs  text_chunk.rs
src/tokens/: end_tag.rs  mod.rs  text_chunk.rs
tests/: comments_test.py  document_end_test.py  element_test.py  lolhtml_test.py
