[package]
name = "python-lolhtml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lolhtml"
crate-type = ["cdylib"]

[dependencies]
lol_html = "0.3.1"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
thiserror = "1.0.32"
